--- a/Coin_gogogo/app/src/main/res/layout/activity_main.xml
+++ b/Coin_gogogo/app/src/main/res/layout/activity_main.xml
@@ -34,9 +34,10 @@
             <EditText
                 android:id="@+id/search_ET"
                 android:layout_width="0dp"
-                android:layout_height="0dp"
+                android:layout_height="40dp"
                 android:layout_margin="0dp"
                 android:maxLines="1"
+                android:maxLength="5"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@id/btn"
                 app:layout_constraintStart_toEndOf="@id/imageView"
@@ -49,6 +50,7 @@
                 android:layout_margin="0dp"
                 android:padding="0dp"
                 android:text="Button"
+                android:visibility="gone"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@id/search_ET"
