--- a/Coin_gogogo/app/src/main/res/layout/activity_board.xml
+++ b/Coin_gogogo/app/src/main/res/layout/activity_board.xml
@@ -10,17 +10,16 @@
         android:layout_height="match_parent"
         tools:context=".activity.BoardActivity">
 
-
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar_post"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:theme="@style/ToolBarTheme"
-            app:layout_constraintBottom_toTopOf="@id/Board_Recycler"
+            app:layout_constraintBottom_toTopOf="@id/priceChart"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            app:layout_constraintTop_toTopOf="parent"
+            >
 
             <TextView
                 android:id="@+id/toolbar_title"
