--- a/Coin_gogogo/app/src/main/res/layout/activity_board.xml
+++ b/Coin_gogogo/app/src/main/res/layout/activity_board.xml
@@ -43,12 +43,13 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/toolbar_post"
+            android:visibility="gone"
             app:layout_constraintVertical_weight="1" />
 
         <androidx.recyclerview.widget.RecyclerView
 
             android:id="@+id/Board_Recycler"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="0dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
