--- a/Coin_gogogo/app/src/main/res/layout/item_post.xml
+++ b/Coin_gogogo/app/src/main/res/layout/item_post.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
 
@@ -9,7 +8,7 @@
     android:layout_marginStart="13dp"
     android:layout_marginTop="7dp"
     android:layout_marginEnd="13dp"
-    android:background="@drawable/get_outline_under"
+    android:background="@drawable/outline_under"
     android:orientation="horizontal"
     android:paddingBottom="7dp">
 
