--- a/Coin_gogogo/app/src/main/res/layout/activity_board.xml
+++ b/Coin_gogogo/app/src/main/res/layout/activity_board.xml
@@ -11,7 +11,7 @@
         tools:context=".activity.BoardActivity">
 
         <androidx.appcompat.widget.Toolbar
-            android:id="@+id/toolbar_post"
+            android:id="@+id/toolbar_board"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:theme="@style/ToolBarTheme"
@@ -42,7 +42,7 @@
             app:layout_constraintBottom_toTopOf="@id/Board_Recycler"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/toolbar_post"
+            app:layout_constraintTop_toBottomOf="@id/toolbar_board"
             android:visibility="gone"
             app:layout_constraintVertical_weight="1" />
 
