--- a/Coin_gogogo/app/src/main/res/layout/activity_write.xml
+++ b/Coin_gogogo/app/src/main/res/layout/activity_write.xml
@@ -134,5 +134,16 @@
                 android:textSize="13sp" />
         </ScrollView>
 
+        <include
+            android:id="@+id/write_loadingview"
+            layout="@layout/view_loader"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
