--- a/Coin_gogogo/app/src/main/res/layout/activity_post.xml
+++ b/Coin_gogogo/app/src/main/res/layout/activity_post.xml
@@ -265,39 +265,92 @@
                 app:layout_constraintTop_toBottomOf="@id/scrollView3">
 
                 <LinearLayout
-                    android:id="@+id/commentT_LinearLayout"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:background="#FFFFFF"
-                    android:paddingStart="10dp"
-                    android:paddingTop="5dp"
-                    android:paddingEnd="5dp"
-                    android:paddingBottom="5dp"
-                    android:visibility="visible"
-                    app:layout_constrainedHeight="true"
-                    app:layout_constrainedWidth="true">
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
 
-                    <EditText
-                        android:id="@+id/Add_commentT"
+                    <LinearLayout
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"
+                        android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:background="@drawable/corner"
-                        android:backgroundTint="@color/gray"
-                        android:hint="댓글을 작성해주세요."
+                        android:orientation="horizontal">
+
+                        <EditText
+                            android:id="@+id/publisher_commentET"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="10dp"
+                            android:layout_weight="1"
+                            android:ems="10"
+                            android:hint="익명id"
+                            android:inputType="textPersonName"
+                            android:maxLength="6"
+                            android:maxLines="1"
+                            android:textSize="12sp" />
+
+                        <EditText
+                            android:id="@+id/pass_commentET"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginEnd="10dp"
+                            android:layout_weight="1"
+                            android:ems="10"
+                            android:hint="password"
+                            android:inputType="numberPassword"
+                            android:maxLength="6"
+                            android:maxLines="1"
+                            android:textSize="12sp" />
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:id="@+id/commentT_LinearLayout"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:background="#FFFFFF"
                         android:paddingStart="10dp"
-                        android:textSize="14sp" />
+                        android:paddingTop="5dp"
+                        android:paddingEnd="5dp"
+                        android:paddingBottom="5dp"
+                        android:visibility="visible"
+                        app:layout_constrainedHeight="true"
+                        app:layout_constrainedWidth="true">
 
-                    <ImageButton
-                        android:id="@+id/Add_comment_btn"
-                        android:layout_width="60dp"
-                        android:layout_height="30dp"
-                        android:layout_weight="1"
-                        android:background="@drawable/ic_comment_send_post" />
+                        <EditText
+                            android:id="@+id/Add_commentT"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:layout_weight="1"
+                            android:background="@drawable/corner"
+                            android:backgroundTint="@color/gray"
+                            android:hint="댓글을 작성해주세요."
+                            android:paddingStart="10dp"
+                            android:textSize="14sp" />
 
+                        <ImageButton
+                            android:id="@+id/Add_comment_btn"
+                            android:layout_width="60dp"
+                            android:layout_height="30dp"
+                            android:layout_weight="1"
+                            android:background="@drawable/ic_comment_send_post" />
+
+                    </LinearLayout>
                 </LinearLayout>
 
+
+
             </FrameLayout>
+
+            <include
+                android:id="@+id/post_loadingview"
+                layout="@layout/view_loader"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:visibility="gone"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
