--- a/Coin_kotlin/app/src/main/res/layout/coin_items.xml
+++ b/Coin_kotlin/app/src/main/res/layout/coin_items.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:gravity="center|left"
         android:orientation="vertical"
-        android:paddingLeft="8dp"
+        android:paddingLeft="11dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/Currency_price_T"
         app:layout_constraintStart_toStartOf="parent"
@@ -46,7 +46,7 @@
         android:id="@+id/fluctate_rate_T"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="5dp"
+        android:paddingStart="10dp"
         android:text="0.40%"
         android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -58,8 +58,7 @@
         android:id="@+id/Currency_price_T"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="5dp"
-        android:layout_marginEnd="10dp"
+        android:paddingStart="2dp"
         android:text="74,692,000"
         android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -72,6 +71,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="5dp"
+        android:gravity="center"
         android:text="332,333백만"
         android:textSize="12sp"
         app:layout_constraintBottom_toBottomOf="parent"
