--- a/Coin_kotlin/app/src/main/res/layout/activity_main.xml
+++ b/Coin_kotlin/app/src/main/res/layout/activity_main.xml
@@ -36,8 +36,12 @@
                 android:layout_width="0dp"
                 android:layout_height="40dp"
                 android:layout_margin="0dp"
-                android:maxLines="1"
+                android:backgroundTint="@color/dividecolor"
+                android:hint="ex) btc"
+                android:inputType="textNoSuggestions|textMultiLine"
                 android:maxLength="5"
+                android:maxLines="1"
+                android:textCursorDrawable="@drawable/cursor_edittext"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@id/btn"
                 app:layout_constraintStart_toEndOf="@id/imageView"
