--- a/Coin_kotlin/app/src/main/res/layout/activity_write.xml
+++ b/Coin_kotlin/app/src/main/res/layout/activity_write.xml
@@ -1,9 +1,149 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".activity.WriteActivity">
+    xmlns:tools="http://schemas.android.com/tools">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/rootConstraintLayout"
+        android:layout_width="match_parent"
+        tools:context=".activity.WriteActivity"
+        android:layout_height="match_parent">
+
+        <LinearLayout
+            android:id="@+id/TopLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constrainedHeight="true"
+            app:layout_constrainedWidth="true"
+            app:layout_constraintBottom_toTopOf="@id/titleLayout"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHeight_min="wrap"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" >
+
+            <include
+                android:id="@+id/write_toolbar"
+                layout="@layout/toolbar_writepost"
+                android:layout_width="match_parent"
+                android:layout_height="50dp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/titleLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constrainedHeight="true"
+            app:layout_constrainedWidth="true"
+            app:layout_constraintBottom_toTopOf="@id/contentLayout"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHeight_min="wrap"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/TopLayout">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="3dp"
+                android:layout_marginEnd="10dp"
+                android:layout_marginRight="10dp"
+                android:orientation="horizontal">
+
+                <EditText
+                    android:id="@+id/publisher_ET"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:ems="10"
+                    android:hint="닉네임"
+                    android:inputType="textPersonName"
+                    android:maxLength="6" />
+
+                <EditText
+                    android:id="@+id/pass_ET"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:ems="10"
+                    android:hint="비밀번호"
+                    android:inputType="numberPassword"
+                    android:maxLength="6"
+                    android:maxLines="1" />
+            </LinearLayout>
+
+            <EditText
+                android:id="@+id/title_edit"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="3dp"
+                android:layout_marginEnd="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_weight="1"
+                android:backgroundTint="#15315C"
+                android:ems="10"
+                android:hint="제목"
+                android:inputType="textPersonName"
+                android:maxLength="30"
+                android:maxLines="1"
+                android:textColorHighlight="#15315C"
+                android:textColorLink="#15315C"
+                android:textSize="20sp" />
+
+        </LinearLayout>
+
+        <ScrollView
+            android:id="@+id/contentLayout"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            app:layout_constrainedHeight="true"
+            app:layout_constrainedWidth="true"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHeight_max="wrap"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/titleLayout">
+
+            <EditText
+                android:id="@+id/content_edit"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginStart="10dp"
+                android:layout_marginEnd="10dp"
+                android:layout_weight="15"
+                android:backgroundTint="#15315C"
+                android:gravity="start|top"
+                android:hint="캡스톤 G조의 SNS_Project의 결과물입니다.
+                 \n아직 미구현되거나 사소한 문제가 발생할 수도 있습니다.
+\n이용하시는 동안 에러나 불편한 점이 발생한다면 010-3482-0575로 연락부탁드립니다.
+\n\n이 앱의 궁극적인 목표는 사업자간의 지역커뮤니티 활성화이며,
+\n그로인한 개인 소상공인들의 정보공유와 공감대형성입니다.
+\n\n작은 앱이지만, 이용하는 동안 서로 불편함이 없도록
+\n주의 바라며, 위반 시 게시물이 삭제되거나 이용이 제한될 수 있습니다.
+\n* 정치/종교/사회/홍보/판매 행위를 금지하며 공격적인 언행 및
+\n 비난은 이용에 제한이 되오니 참고바랍니다.
+\n\n명지대학교 최성철 교수님의 캡스톤1 G조 -전성진- \n\n\n\n\n\n\n\n\n\n\n\n\n "
+                android:inputType="textMultiLine"
+                android:maxLength="200"
+                android:textColorHighlight="#15315C"
+                android:textColorLink="#FFFFFF"
+                android:textSize="13sp" />
+        </ScrollView>
+
+        <include
+            android:id="@+id/write_loadingview"
+            layout="@layout/view_loader"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
