--- a/Coin_kotlin/app/src/main/res/layout/mpchart_items.xml
+++ b/Coin_kotlin/app/src/main/res/layout/mpchart_items.xml
@@ -2,7 +2,8 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="@color/night">
 
     <com.github.mikephil.charting.charts.CandleStickChart
         android:id="@+id/candlestick_chart"
@@ -12,7 +13,7 @@
         android:layout_marginTop="10dp"
         android:layout_marginEnd="10dp"
         android:layout_marginBottom="10dp"
-        android:background="@drawable/get_outline"
+        android:background="@color/night"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
