chart goes to view 22-01-12

--- a/Coin_kotlin/app/src/main/res/layout/activity_board.xml
+++ b/Coin_kotlin/app/src/main/res/layout/activity_board.xml
@@ -37,12 +37,13 @@
         <com.github.mikephil.charting.charts.CandleStickChart
             android:id="@+id/priceChart"
             android:layout_width="0dp"
-            android:layout_height="200dp"
+            android:layout_height="170dp"
+            android:background="@color/night"
+            android:visibility="visible"
             app:layout_constraintBottom_toTopOf="@id/Board_Recycler"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/toolbar_board"
-            android:visibility="gone"
             app:layout_constraintVertical_weight="1" />
 
         <androidx.recyclerview.widget.RecyclerView
