--- a/Coin_kotlin/app/src/main/res/layout/activity_main.xml
+++ b/Coin_kotlin/app/src/main/res/layout/activity_main.xml
@@ -70,8 +70,7 @@
             app:layout_constraintBottom_toTopOf="@id/Coin_RecyclerView"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/linear"
-            >
+            app:layout_constraintTop_toBottomOf="@id/linear">
 
             <TextView
                 android:id="@+id/Name_T"
