--- a/Coin_kotlin/app/src/main/res/values/themes.xml
+++ b/Coin_kotlin/app/src/main/res/values/themes.xml
@@ -15,11 +15,14 @@
     </style>
 
     <style name="ToolBarTheme" parent="ThemeOverlay.AppCompat.ActionBar">
-        <item name="android:tint">@color/black</item>
+        <item name="android:background">@color/night</item>
+        <item name="android:textColor">@color/night_white</item>
     </style>
 
     <style name="nightmode" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <item name="android:tint">@color/black</item>
+        <item name="android:background">@color/night</item>
+        <item name="android:textColor">@color/night_white</item>
     </style>
 
 
