--- a/Coin_kotlin/app/src/main/res/layout/toolbar_writepost.xml
+++ b/Coin_kotlin/app/src/main/res/layout/toolbar_writepost.xml
@@ -22,6 +22,7 @@
             android:layout_alignParentBottom="true"
             android:layout_marginTop="10dp"
             android:layout_marginBottom="10dp"
+            android:visibility="gone"
             app:srcCompat="@drawable/ic_back_button" />
 
         <TextView
