--- a/Coin_kotlin/app/src/main/res/layout/activity_main.xml
+++ b/Coin_kotlin/app/src/main/res/layout/activity_main.xml
@@ -7,12 +7,15 @@
 
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/night"
         tools:context=".activity.MainActivity">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/linear"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:focusable="true"
+            android:focusableInTouchMode="true"
             android:orientation="horizontal"
             app:layout_constraintBottom_toTopOf="@id/Layout"
             app:layout_constraintEnd_toEndOf="parent"
@@ -36,11 +39,14 @@
                 android:layout_width="0dp"
                 android:layout_height="40dp"
                 android:layout_margin="0dp"
-                android:backgroundTint="@color/dividecolor"
+                android:backgroundTint="@color/night_white"
+                android:focusedByDefault="false"
                 android:hint="ex) btc"
                 android:inputType="textNoSuggestions|textMultiLine"
                 android:maxLength="5"
                 android:maxLines="1"
+                android:textColor="@color/white"
+                android:textColorHint="@color/night_white"
                 android:textCursorDrawable="@drawable/cursor_edittext"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@id/btn"
@@ -80,6 +86,7 @@
                 android:layout_marginEnd="15dp"
                 android:maxLines="1"
                 android:text="코인명"
+                android:textColor="@color/night_white"
                 android:textSize="10sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/Currency_price_T"
@@ -93,6 +100,7 @@
                 android:layout_marginEnd="5dp"
                 android:gravity="center"
                 android:text="24시 변동률"
+                android:textColor="@color/night_white"
                 android:textSize="10sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/total_T"
@@ -107,6 +115,7 @@
                 android:layout_marginEnd="10dp"
                 android:gravity="center"
                 android:text="현재가"
+                android:textColor="@color/night_white"
                 android:textSize="10sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@id/fluctate_rate_T"
@@ -120,6 +129,7 @@
                 android:layout_marginEnd="5dp"
                 android:gravity="center"
                 android:text="24시 거래량"
+                android:textColor="@color/night_white"
                 android:textSize="10sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
