--- a/Coin_Kotlin-master/Coin_kotlin/app/src/main/res/layout/activity_post.xml
+++ b/Coin_Kotlin-master/Coin_kotlin/app/src/main/res/layout/activity_post.xml
@@ -294,7 +294,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:layout_weight="1"
-                            android:background="@drawable/corner_gray"
+                            android:background="@drawable/corner"
                             android:hint="댓글을 작성해주세요."
                             android:paddingStart="10dp"
                             android:textSize="14sp" />
