--- a/Coin_Kotlin-master/Coin_kotlin/app/src/main/res/layout/activity_main.xml
+++ b/Coin_Kotlin-master/Coin_kotlin/app/src/main/res/layout/activity_main.xml
@@ -50,7 +50,7 @@
                     android:hint="ex) btc"
                     android:inputType="textNoSuggestions|textMultiLine"
                     android:maxLength="5"
-                    android:maxLines="1"
+                    android:singleLine="true"
                     android:textColor="@color/white"
                     android:textColorHint="@color/night_white"
                     android:textCursorDrawable="@drawable/cursor_edittext"
