--- a/Coin_Kotlin-master/Coin_kotlin/app/src/main/res/layout/activity_info.xml
+++ b/Coin_Kotlin-master/Coin_kotlin/app/src/main/res/layout/activity_info.xml
@@ -64,7 +64,7 @@
                             android:id="@+id/nicknameT"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="핑쿠"
+                            android:text="@{User.nickname}"
                             android:textColor="@color/white"
                             android:textSize="18sp"
                             android:textStyle="bold" />
