--- a/Coin_Kotlin-master/Coin_kotlin/app/src/main/res/layout/activity_main.xml
+++ b/Coin_Kotlin-master/Coin_kotlin/app/src/main/res/layout/activity_main.xml
@@ -159,6 +159,7 @@
                 android:layout_marginEnd="16dp"
                 android:layout_marginBottom="16dp"
                 android:clickable="true"
+                app:backgroundTint="@color/purple_200"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:srcCompat="@android:drawable/ic_dialog_info" />
