--- a/Coin_Kotlin-master/Coin_kotlin/app/src/main/res/layout/activity_info.xml
+++ b/Coin_Kotlin-master/Coin_kotlin/app/src/main/res/layout/activity_info.xml
@@ -116,6 +116,15 @@
                         android:textColor="@color/night_white"
                         android:textSize="18sp" />
 
+                    <TextView
+                        android:id="@+id/withdraw"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="10dp"
+                        android:text="회원탈퇴"
+                        android:textColor="@color/night_white"
+                        android:textSize="18sp" />
+
                 </LinearLayout>
 
                 <LinearLayout
