--- a/Coin_Kotlin-master/Coin_kotlin/app/src/main/res/layout/item_comments.xml
+++ b/Coin_Kotlin-master/Coin_kotlin/app/src/main/res/layout/item_comments.xml
@@ -45,7 +45,6 @@
                         android:id="@+id/nickname_commentT"
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
-                        android:paddingEnd="2dp"
                         android:text="TextView"
                         android:textSize="12sp"
                         android:textStyle="bold" />
@@ -54,9 +53,9 @@
                         android:id="@+id/comment_GoodLayout"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="10dp"
+                        android:layout_marginStart="3dp"
                         android:gravity="center_vertical"
-                        android:visibility="gone">
+                        android:visibility="visible">
 
                         <ImageView
                             android:layout_width="15dp"
