--- a/Coin_Kotlin-master/Coin_kotlin/app/src/main/res/layout/item_post.xml
+++ b/Coin_Kotlin-master/Coin_kotlin/app/src/main/res/layout/item_post.xml
@@ -73,6 +73,16 @@
                 android:textSize="10sp" />
         </LinearLayout>
 
+        <TextView
+            android:id="@+id/coinNameT"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="TextView"
+            android:layout_marginStart="2dp"
+            android:textColor="@color/night"
+            android:textStyle="bold"
+            android:visibility="gone"
+            android:textSize="10sp"/>
     </LinearLayout>
 
     <LinearLayout
