--- a/Coin_Kotlin-master/Coin_kotlin/app/src/main/res/layout/activity_board.xml
+++ b/Coin_Kotlin-master/Coin_kotlin/app/src/main/res/layout/activity_board.xml
@@ -51,10 +51,23 @@
             android:id="@+id/Board_Recycler"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/ads"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/priceChart" />
+
+        <com.google.android.gms.ads.AdView
+            android:id="@+id/ads"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:adSize="BANNER"
+            app:adUnitId="ca-app-pub-3940256099942544/6300978111"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/Board_Recycler">
+
+        </com.google.android.gms.ads.AdView>
 
         <include
             android:id="@+id/board_loadingview"
