--- a/Coin_Kotlin-master/Coin_kotlin/app/src/main/res/layout/activity_main.xml
+++ b/Coin_Kotlin-master/Coin_kotlin/app/src/main/res/layout/activity_main.xml
@@ -78,6 +78,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:paddingBottom="5dp"
+                android:background="@color/night"
                 app:layout_constraintBottom_toTopOf="@id/Coin_RecyclerView"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -146,6 +147,7 @@
                 android:id="@+id/Coin_RecyclerView"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
+                android:background="@color/night"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
