--- a/Coin_Kotlin-master/Coin_kotlin/app/src/main/res/layout/activity_main.xml
+++ b/Coin_Kotlin-master/Coin_kotlin/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,7 @@
         android:id="@+id/drawer_layout"
         android:layout_height="match_parent"
         android:layout_width="match_parent"
+        android:background="@color/night"
         >
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -23,6 +24,7 @@
                 android:focusable="true"
                 android:focusableInTouchMode="true"
                 android:orientation="horizontal"
+                android:background="@color/night"
                 app:layout_constraintBottom_toTopOf="@id/Layout"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
