--- a/Coin_Kotlin-master/Coin_kotlin/app/src/main/res/layout/activity_alarm.xml
+++ b/Coin_Kotlin-master/Coin_kotlin/app/src/main/res/layout/activity_alarm.xml
@@ -26,7 +26,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
             android:orientation="vertical"
-            app:layout_constraintBottom_toTopOf="@+id/AlarmRecycler"
+            app:layout_constraintBottom_toTopOf="@+id/alarmRecycler"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@id/toolbar_alarm">
@@ -136,7 +136,7 @@
         </LinearLayout>
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/AlarmRecycler"
+            android:id="@+id/alarmRecycler"
             android:layout_width="0dp"
             android:layout_height="0dp"
             app:layout_constraintBottom_toBottomOf="parent"
