--- a/Coin_Kotlin-master/Coin_kotlin/app/src/main/res/layout/activity_login.xml
+++ b/Coin_Kotlin-master/Coin_kotlin/app/src/main/res/layout/activity_login.xml
@@ -15,9 +15,11 @@
 
         <ImageView
             android:id="@+id/imageView3"
-            android:layout_width="350dp"
-            android:layout_height="160dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="40dp"
             android:layout_marginTop="20dp"
+            android:layout_marginEnd="40dp"
             android:layout_marginBottom="20dp"
             app:layout_constraintBottom_toTopOf="@+id/login_btn"
             app:layout_constraintEnd_toEndOf="parent"
