--- a/Coin_Kotlin-master/Coin_kotlin/app/src/main/res/layout/activity_main.xml
+++ b/Coin_Kotlin-master/Coin_kotlin/app/src/main/res/layout/activity_main.xml
@@ -57,10 +57,21 @@
                     android:textColorHint="@color/night_white"
                     android:textCursorDrawable="@drawable/cursor_edittext"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toStartOf="@id/favorit_btn"
+                    app:layout_constraintEnd_toStartOf="@id/bbb"
                     app:layout_constraintStart_toEndOf="@id/imageView"
                     app:layout_constraintTop_toTopOf="parent" />
 
+                <com.balysv.materialripple.MaterialRippleLayout
+                    android:id="@+id/bbb"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    app:mrl_rippleDuration="250"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toEndOf="@id/search_ET"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:mrl_rippleOverlay="true">
                 <ImageButton
                     android:id="@+id/favorit_btn"
                     android:layout_width="wrap_content"
@@ -70,10 +81,8 @@
                     android:padding="18dp"
                     android:text="Button"
                     android:visibility="visible"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toEndOf="@id/search_ET"
-                    app:layout_constraintTop_toTopOf="parent" />
+                     />
+                </com.balysv.materialripple.MaterialRippleLayout>
             </androidx.constraintlayout.widget.ConstraintLayout>
 
             <androidx.constraintlayout.widget.ConstraintLayout
@@ -163,6 +172,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="16dp"
                 android:layout_marginBottom="16dp"
+                android:background="?attr/selectableItemBackground"
                 android:clickable="true"
                 app:backgroundTint="@color/purple_200"
                 app:layout_constraintBottom_toBottomOf="parent"
