--- a/Coin_Kotlin-master/Coin_kotlin/app/src/main/res/drawable/corner_dark.xml
+++ b/Coin_Kotlin-master/Coin_kotlin/app/src/main/res/drawable/corner_dark.xml
@@ -4,7 +4,7 @@
     <corners android:radius="10dp"/>
     <stroke
         android:width="1dp"
-        android:color="#37000000" />
+        android:color="@color/night_white" />
 
     <solid android:color="@color/night" />
 </shape>
