--- a/Coin_Kotlin-master/Coin_kotlin/app/src/main/res/layout/activity_login.xml
+++ b/Coin_Kotlin-master/Coin_kotlin/app/src/main/res/layout/activity_login.xml
@@ -11,7 +11,7 @@
         android:gravity="center|top"
         android:orientation="vertical"
         android:paddingTop="100dp"
-        tools:context=".activity.Login">
+        tools:context=".activity.LoginActivity">
 
         <ImageView
             android:id="@+id/imageView3"
