--- a/Coin_Kotlin-master/Coin_kotlin/app/src/main/res/layout/activity_login.xml
+++ b/Coin_Kotlin-master/Coin_kotlin/app/src/main/res/layout/activity_login.xml
@@ -52,6 +52,7 @@
                 android:layout_weight="1"
                 android:gravity="center"
                 android:text="구글 로그인"
+                android:textColor="@color/black"
                 android:textSize="14sp"
                 android:textStyle="bold" />
 
